--- a/style/modules.css
+++ b/style/modules.css
@@ -1,7 +1,7 @@
 body {
   width:90%;
   margin:auto;
-  background-color: gray;
+  background-color: #32ab9f;
 }
 
 h1 {
@@ -13,16 +13,29 @@ aside {
   height:90%;
   width: 20%;
   margin: 1em;
-  background-color: white;
+  background-color: #cceae7;
+}
+
+#about {
+  float:left;
+  height:20%;
+  width:70%;
+  margin:1em;
+  text-align: center;
+  background-color: #99d5cf;
 }
 
 #projects {
   float: left;
-  height:90%;
+  height:70%;
   width: 70%;
   margin:1em;
-  background-color: white;
+  background-color: #99d5cf;
   text-align: center;
+}
+
+.template {
+  display:none;
 }
 
 footer {
@@ -33,6 +46,5 @@ footer {
   margin-top: -10%;
   padding:.5em;
   text-align: center;
-  background-color: white;
-
+  background-color: #cceae7;
 }
