--- a/style/modules.css
+++ b/style/modules.css
@@ -10,17 +10,26 @@ h1 {
 
 aside {
   float: left;
-  height:90%;
-  width: 20%;
-  margin: 1em;
+  width:90%;
   background-color: #cceae7;
+}
+
+aside li {
+  display:inline-block;
+  padding-left:.5em;
+}
+
+
+.template {
+  display:none;
 }
 
 #about {
   float:left;
   height:20%;
-  width:70%;
-  margin:1em;
+  width:80%;
+  margin-top:1em;
+  margin-left:2em;
   text-align: center;
   background-color: #99d5cf;
 }
@@ -28,23 +37,74 @@ aside {
 #projects {
   float: left;
   height:70%;
-  width: 70%;
-  margin:1em;
+  width: 80%;
+  margin-top:1em;
+  margin-bottom:1em;
+  margin-left:2em;
   background-color: #99d5cf;
   text-align:center;
 }
 
-.template {
-  display:none;
-}
+
 
 footer {
   clear: both;
   height: 10%;
-  width: 50%;
-  margin-left:25%;
-  margin-top: -10%;
+  width: 80%;
+  margin-left:1em;
   padding:.5em;
   text-align: center;
   background-color: #cceae7;
+}
+
+
+
+@media screen and (min-width:900px) {
+  body {
+    width:90%;
+    margin:auto;
+    background-color: #32ab9f;
+  }
+
+    aside {
+      float: left;
+      height:50%;
+      width: 20%;
+      margin: 1em;
+      background-color: #cceae7;
+    }
+
+    #about {
+      float:left;
+      height:20%;
+      width:70%;
+      margin:1em;
+      text-align: center;
+      background-color: #99d5cf;
+    }
+
+    #projects {
+      float: left;
+      height:70%;
+      width: 70%
+      margin:1em;
+      background-color: #99d5cf;
+      text-align:center;
+    }
+
+    footer {
+      clear: both;
+      height: 10%;
+      width: 50%;
+      margin-left:25%;
+      margin-top: -10%;
+      padding:.5em;
+      text-align: center;
+      background-color: #cceae7;
+    }
+  }
+
+
+
+
 }
