--- a/style/base.css
+++ b/style/base.css
@@ -1,44 +1,34 @@
-hr {
-  position:center;
-  width:40%;
-  border-color: black;
+img {
+  max-width: 100%;
 }
 
-/*Text Style */
-p, li {
-  font-size:1em;
-  font-family: 'Merriweather', sans-serif;
+body {
+  line-height: 1.5;
+  font-size: 100%;
+  background-color: #32ab9f;
 }
 
-h1{
-  font-family: 'Oswald', serif;
-  font-size:1.999em;
+
+/*TEXT STYLES
+=======================================*/
+p {
+  font-size: 1em;
 }
 
-h2 {
-  font-family: 'Oswald', serif;
-  font-size:1.999em;
-}
 
-h3 {
-  font-family: 'Oswald', serif;
-  font-size:1.414em;
-}
 
-/*Link Style */
-a {
+/*LINK STYLES
+=======================================*/
+
+a, a:link, a:active {
   text-decoration: none;
+  color: #0d31ff
 }
 
-@media screen and (min-width:900px) {
+a:hover, a:focus {
+  color: #0d31ff
+}
 
-  h1{
-    font-family: 'Oswald', serif;
-    font-size:3.998em;
-  }
-
-  hr {
-    position:center;
-    width:80%;
-  }
+a:visited {
+  color:#0d31ff;
 }
