--- a/style/base.css
+++ b/style/base.css
@@ -13,6 +13,26 @@ p {
   font-size: 1em;
 }
 
+p, li {
+  font-size:1em;
+  font-family: 'Merriweather', sans-serif;
+}
+
+h1, h2, h3 {
+  font-family: 'Oswald', serif;
+  text-align: center;
+  text-decoration: underline;
+}
+
+h1, h2 {
+  font-size:1.999em;
+}
+
+
+h3 {
+  font-size:1.414em;
+}
+
 
 
 /*LINK STYLES
@@ -29,4 +49,13 @@ a:hover, a:focus {
 
 a:visited {
   color:#0d31ff;
+}
+
+@media screen and (min-width:900px) {
+
+  h1{
+    font-size:3.998em;
+  }
+
+
 }
